Final Commit (I think)
added more data processing files for thresholding

Edits to ReadMe

Updated Readme

HTML Styling

Readme and Csv files updated

Some Changes

Add .DS_Store to .gitignore

Remove dsstore

added requirements

Changed README sequence

--- a/experiments/resnet_unet_etal/BreastMNIST.ipynb
+++ b/experiments/resnet_unet_etal/BreastMNIST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -20,6 +20,7 @@
     }
    ],
    "source": [
+    "#Connect to Google Drive\n",
     "from google.colab import drive\n",
     "drive.mount('/content/drive')"
    ]
@@ -48,12 +49,13 @@
     }
    ],
    "source": [
+    "#Generate image folder and test, val and train csvs \n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
     "from PIL import Image\n",
     "\n",
-    "dataset_path = '/content/drive/MyDrive/BreastMNIST/breastmnist_224.npz'  # Replace with your actual path\n",
+    "dataset_path = '/content/drive/MyDrive/BreastMNIST/breastmnist_224.npz'  \n",
     "data = np.load(dataset_path)\n",
     "\n",
     "train_images = data['train_images']\n",
@@ -64,19 +66,19 @@
     "test_labels = data['test_labels']\n",
     "\n",
     "def save_image_array(image_array, output_path):\n",
-    "    image = Image.fromarray(image_array.astype('uint8'))  # Ensure the image is in the right format\n",
+    "    image = Image.fromarray(image_array.astype('uint8'))  \n",
     "    image.save(output_path)\n",
     "\n",
-    "base_output_dir = '/content/drive/MyDrive/BreastMNIST'  # Base directory\n",
-    "image_output_dir = os.path.join(base_output_dir, 'images')  # Directory where images will be stored\n",
-    "os.makedirs(image_output_dir, exist_ok=True)  # Create the image directory if it doesn't exist\n",
+    "base_output_dir = '/content/drive/MyDrive/BreastMNIST' \n",
+    "image_output_dir = os.path.join(base_output_dir, 'images')  \n",
+    "os.makedirs(image_output_dir, exist_ok=True)\n",
     "\n",
     "def create_image_file_paths(images, labels, dataset_type):\n",
     "    image_paths = []\n",
     "    label_list = []\n",
     "\n",
     "    for i, (image, label) in enumerate(zip(images, labels)):\n",
-    "        image_filename = f'{dataset_type}_image_{i}.png'  # Create a unique filename\n",
+    "        image_filename = f'{dataset_type}_image_{i}.png'  \n",
     "        image_filepath = os.path.join(image_output_dir, image_filename)\n",
     "\n",
     "        save_image_array(image, image_filepath)\n",
@@ -258,6 +260,7 @@
     }
    ],
    "source": [
+    "#Mask threshold creator and csv updater\n",
     "import os\n",
     "import pandas as pd\n",
     "import cv2\n",
@@ -342,6 +345,7 @@
     }
    ],
    "source": [
+    "## ResNet\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader, Dataset\n",
@@ -473,6 +477,7 @@
    },
    "outputs": [],
    "source": [
+    "## Modified Unet with mask and resnet encoder\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader, Dataset\n",
@@ -648,6 +653,7 @@
     }
    ],
    "source": [
+    "##Accuracy and AUC\n",
     "import torch\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
     "\n",
