--- a/experiments/resnet_unet_etal/DermaMNIST.ipynb
+++ b/experiments/resnet_unet_etal/DermaMNIST.ipynb
@@ -20,6 +20,7 @@
     }
    ],
    "source": [
+    "#Connect to Google Drive\n",
     "from google.colab import drive\n",
     "drive.mount('/content/drive')"
    ]
@@ -54,6 +55,7 @@
     }
    ],
    "source": [
+    "#Generate image folder and test, val and train csvs \n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
@@ -257,6 +259,7 @@
     }
    ],
    "source": [
+    "# To move csv files from local /content to specific Drive\n",
     "import os\n",
     "import shutil\n",
     "\n",
@@ -312,6 +315,7 @@
     }
    ],
    "source": [
+    "# Add Mask Path to csvs\n",
     "import os\n",
     "import pandas as pd\n",
     "import cv2\n",
@@ -394,6 +398,7 @@
     }
    ],
    "source": [
+    "# Modified Unet\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader, Dataset\n",
@@ -498,6 +503,7 @@
    },
    "outputs": [],
    "source": [
+    "# Standard UNet\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
@@ -673,6 +679,7 @@
    },
    "outputs": [],
    "source": [
+    "# Accuracy and AUC\n",
     "import torch\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
     "from sklearn.preprocessing import label_binarize\n",
@@ -725,6 +732,7 @@
     }
    ],
    "source": [
+    "# Save Model\n",
     "save_path = \"unet_model.pth\" \n",
     "torch.save(model.state_dict(), save_path)\n",
     "print(f\"Model saved to {save_path}\")"
