--- a/experiments/resnet_unet_etal/PneumoniaMNIST.ipynb
+++ b/experiments/resnet_unet_etal/PneumoniaMNIST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -20,6 +20,7 @@
     }
    ],
    "source": [
+    "#Connect to Google Drive\n",
     "from google.colab import drive\n",
     "drive.mount('/content/drive')"
    ]
@@ -44,6 +45,7 @@
     }
    ],
    "source": [
+    "#Generate image folder and test, val and train csvs \n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
@@ -267,6 +269,7 @@
     }
    ],
    "source": [
+    "#Mask threshold creator and csv updater\n",
     "import os\n",
     "import pandas as pd\n",
     "import cv2\n",
@@ -463,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -493,6 +496,7 @@
     }
    ],
    "source": [
+    "# ResNet Classifier\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader, Dataset\n",
@@ -634,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -653,6 +657,7 @@
     }
    ],
    "source": [
+    "# AUC and ACC\n",
     "import torch\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
     "\n",
@@ -699,10 +704,18 @@
     }
    ],
    "source": [
+    "# Save Model \n",
     "save_path = \"unet_model.pth\"  \n",
     "torch.save(model.state_dict(), save_path)\n",
     "print(f\"Model saved to {save_path}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
